grammar.js
        file: $ => repeat(
            choice(
                $.section,
                $._declarations,
                $._nl,
            )
        ),

        _nl: _ => choice('\n', '\r'),
        _eol: $ => choice('\n', '\r', $._eof),
        _indent: $ => token(/[ \r\t]+/),
        _eol: $ => token(/\n/),
        minus: $ => token('-'),
        date: $ => token(/((000[1-9]|00[1-9]\d|0[1-9]\d{2}|[1-9]\d{3})[-\/](0[1-9]|1[0-2])[-\/](0[1-9]|[12]\d|3[01]))/),
        // Account names: Assets|Liabilities|Equity|Income|Expenses followed by colon-separated components
        // Components can contain Unicode letters/numbers including CJK characters
        // account: $ => $.identifier, // token(/[^\s\\ \n\r]/),

        account: $ =>
            token(
                seq(
                    /[\p{Lu}\u3040-\u309f\u30a0-\u30ff\u4e00-\u9fff\uac00-\ud7a3][\p{L}\p{N}\u3040-\u309f\u30a0-\u30ff\u4e00-\u9fff\uac00-\ud7a3]*/,
                    repeat(
                        seq(
                            ":",
                            /[\p{Lu}\p{N}\u3040-\u309f\u30a0-\u30ff\u4e00-\u9fff\uac00-\ud7a3][\p{L}\p{N}\u3040-\u309f\u30a0-\u30ff\u4e00-\u9fff\uac00-\ud7a3\-]*/,
                        ),
                    ),
                ),
            ),
        currency: $ => token(/[A-Z][A-Z0-9\'\._\-]*[A-Z0-9]?/),
        string: $ => token(/"([^"]|\\")*"/),
        number: $ => token(/([0-9]+|[0-9][0-9,]+[0-9])(\.[0-9]*)?/),
        tag: $ => token(/#[A-Za-z0-9\-_/.]+/),
        link: $ => token(/\^[A-Za-z0-9\-_/.]+/),

        /*--------------------------------------------------------------------------------*/
        /* ARITHMETIC EXPRESSIONS */
        /*--------------------------------------------------------------------------------*/
        // Operator precedence: PLUS/MINUS (left, 1), MULTIPLY/DIVIDE (left, 2), UNARY (3)

        txn: $ => choice(
            "txn",
            $.flag,
            "*",
            "#"
        ),

        _number_expr: $ =>
            choice(
                $.number,
                $._paren__number_expr,
                $.unary_number_expr,
                $.binary_number_expr,
            ),
        unary_number_expr: $ =>
            prec(3,
                choice(
                    seq(
                        $.minus,
                        $._number_expr,
                    ),
                    seq(
                        $.plus,
                        $._number_expr,
                    ),
                ),
            ),
        _txn_strings: $ =>
            choice(
                seq(
                    field("payee", alias($.string, $.payee)),
                    field("narration", alias($.string, $.narration)),
                ),
                field("narration", alias($.string, $.narration)),
            ),

        // OPTIONAL
        tags_links: $ =>
            repeat1(
                //seq(
                //   optional($._indent),
                choice(
                    $.link,
                    $.tag,
                ),
                //),
            ),

        transaction: $ =>
            seq(
                field("date", $.date),
                field("txn", $.txn),
                optional($._txn_strings),
                field("tags_links", optional($.tags_links)),
                field("comment", optional($.comment)),
                $._eol,
                optional(
                    repeat1(
                        choice(
                            seq(
                                $._indent,
                                $._eol
                            ),
                            seq(
                                $._indent,
                                $.tags_links,
                                $._eol
                            ),
                            $._key_value_line,
                            $.posting,
                            seq(
                                $._indent,
                                field("comment", $.comment),
                                $._eol
                            )
                        )
                    ),
                ),

            ),

        // OPTIONAL
        posting: $ =>
            seq(
                $._indent,
                field("optflag", optional($.optflag)),
                field("account", $.account),
                field("amount", optional($.incomplete_amount)),
                field("cost_spec", optional($.cost_spec)),
                optional(
                    seq(
                        choice($.at, $.atat),
                        field("price_annotation", optional($.price_annotation))
                    )
                ),
                field("comment", optional($.comment)),
                $._eol
            ),

        _key_value_line: $ => seq(
            $._indent,
            /*prec.left(seq(
                $.key,
                ":",
                $.value,
            )),*/
            $.key_value,
            $._eol
        ),

        // OPTIONAL
        pushtag: $ => seq(
            "pushtag",
            $.tag,
            $._eol
        ),

        poptag: $ => seq(
            "poptag",
            $.tag,
            $._eol
        ),

        incomplete_amount: $ =>
            seq(
                $._number_expr, // maybe_number
                $.currency      // maybe_currenecy
            ),

        // OPTIONAL
        option: $ => seq(
            "option",
            field("key", $.string),
            field("value", $.string),
            $._eol,
        ),

        include: $ => seq(
            "include",
            $.string,
            $._eol,
        ),

        _declarations: $ => choice(
            $._directive,
            $._entry,
            $._skipped_lines,
        ),

        /*--------------------------------------------------------------------------------*/
        /* UTILITY AND LEXICAL RULES */
        /*--------------------------------------------------------------------------------*/

        identifier: $ => /[a-zA-Z]+/,
