test/corpus/parser_include.txt
=================
include absolute
=================

include "/some/absolute/filename.beancount"

---

(file
    (directive
        (include (string))
    )
)

=================
include relative
=================

include "some/relative/filename.beancount"

---

(file
    (directive
        (include (string))
    )
)
