test/corpus/push_pop_tag.txt
==================
push tag
==================

pushtag #sampleTag

---

(file
  (pushtag
    (keyword_pushtag)
    (tag)))

================
pop tag
================

poptag #sampleTag

---

(file
  (poptag
    (keyword_poptag)
    (tag)))
